# HSE-AI-Hack-Python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/models/: base.py  gemma.py  gigachat.py  qwen.py  yandexgpt.py
app/utils/: anonimize.py  metric.py  submit.py
notebooks/: gemma.ipynb  gigachat.ipynb  qwen.ipynb  yandexgpt.ipynb
tests/: test_correctness.py  test_embedding_generation.py
