[tool.poetry]
name = "HSE-AI-Hack-Python"
version = "0.1.0"
description = "Solution of HSE AI Assistant Hack: Python by MLCats"
authors = ["Daniel Spiridonov & Ilya Krutskikh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
transformers = "^4.45.2"
openpyxl = "^3.1.5"
accelerate = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.10.0" }
pre-commit = "^4.0.1"
jupyter = "^1.1.1"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120